<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fullname_GCMRegistration"
        android:paddingTop="35dp"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"/>

    <EditText
        android:id="@+id/EditTextFullName"
        android:layout_width="fill_parent"
        android:paddingTop="12dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:singleLine="true"
        android:layout_marginBottom="20dip"
        android:inputType="textPersonName"
        android:hint="@string/enterName" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/emailID_GCMRegistration"
        android:paddingTop="22dp"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"/>

    <EditText
        android:id="@+id/EditTextEmailID"
        android:layout_width="fill_parent"
        android:layout_height="43dp"
        android:layout_margin="10dip"
        android:singleLine="true"
        android:layout_marginBottom="30dip"
        android:inputType="textEmailAddress"
        android:hint="@string/enterEmailID" />

    <Button
        android:id="@+id/ButtonGCMRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:onClick="SubmitRegistrationDetails"
        android:layout_margin="10dip"/>

</LinearLayout>